# ATC-FS25

./: .gitignore  CMakeLists.txt  README.md  agents.py  animate.py  environment.py  main.py  optimizer.py  physics.py  plot_traj.py
include/ATC-FS25/: Geometry.hpp  Map.hpp
np_saves/: convergence_demo.npy  last_run.npy
src/: main.cpp
